--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
+    "docs:build": "vuepress build docs",
+    "docs:dev": "vuepress dev docs",
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
@@ -25,7 +27,10 @@
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.1.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-cli-plugin-awesome-scss-base": "^0.0.2",
+    "vue-cli-plugin-awesome-vuepress": "^0.0.5",
+    "vue-template-compiler": "^2.6.10",
+    "vuepress": "^1.0.3"
   },
   "eslintConfig": {
     "root": true,
