--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "zxx-ui-least",
-  "version": "0.1.0",
-  "private": true,
+  "version": "0.1.6",
+  "main": "src/index.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "element-ui": "^2.11.1",
     "vue": "^2.6.10"
   },
   "devDependencies": {
